PR fix: reverted allPitTable w3-grid to an actual table, but 'rotated' the table left (header on left etc)
- reverted to a table format after having issues with width and standardizing rows
- added a horizontal scrollbar
- will now work on doing the same with the matchDataTable

--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,17 @@ table, th, td
   color:gold;
 }
 
+#allTeamsPitAnswers-Div
+{
+  max-width: 800px;
+}
+
+#allTeamsPitAnswers
+{
+  display:block;
+  overflow-x:auto;
+}
+
 .allPitTableHeader:not(:last-child)
 {
   border-bottom: 2px solid gold;
